# clark

./: CMakeLists.txt  README.md  builddb.sh
7zC/: CMakeLists.txt
src/: CLARK_hh.hh  FILEex.cpp  FILEex.h  FileHandler.cc  FileHandler.hh  FileHandlerA.cc  FileHandlerA.hh  FileHandlerQ.cc  FileHandlerQ.hh  HashTableStorage_hh.hh  HashTop.hh  analyser.cc  analyser.hh  contiguousToSpaced_hh.hh  dataType.hh  file.cc  file.hh  getAbundance.cc  getAccssnTaxID.cc  getConfidencedensity.cc  getGammadensity.cc  getSeqVirFiles.cc  getTargetsDef.cc  getfilesToTaxNodes.cc  hashTable_hh.hh  kmersConversion.cc  kmersConversion.hh  main.cc  main_spaced.cc  makeSamplesSummaryTables.cc  parameters.hh  parameters_hh  parameters_shh  spacedKmer.hh
